replace boost.coroutine by boost.context in spawn()
- boost.context is deprecated (preprocessor warnings)
- C++11: use callcc()/continuation from boost.context
- pre-C++11: use private fcontext-API from boost.context

- rebased on boost 1.71.0
- added constraints to StackAllocator templates
Signed-off-by: Casey Bodley <cbodley@redhat.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,11 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Boost 1.66 REQUIRED COMPONENTS system context coroutine)
+find_package(Boost 1.66 REQUIRED COMPONENTS system context)
 
 add_library(spawn INTERFACE)
 target_include_directories(spawn INTERFACE include)
-target_compile_options(spawn INTERFACE "-DBOOST_COROUTINES_NO_DEPRECATION_WARNING")
-target_link_libraries(spawn INTERFACE Boost::system Boost::context Boost::coroutine)
+target_link_libraries(spawn INTERFACE Boost::system Boost::context)
 install(DIRECTORY include/spawn DESTINATION include)
 
 option(SPAWN_TEST_ADDRESS_SANITIZER "build spawn tests with address sanitizer" ON)
